# forest

./: Cargo.toml  Makefile  technical_architecture_document.md
.trae/documents/: development_design_document.md  ecological_loop_design.md  product_requirements_document.md
docs/: bevy_reference.md  development_plan.md
docs/development/: bevy_0.18_rewrite_progress.md  guide.md
docs/development/tasks/: building.md  equipment_crafting.md  plant_upgrade.md
docs/game/: system.md
docs/game/system/: dependency.md  environment.md  equipment.md  plant.md  player.md  robot.md  ui.md
docs/implementation/: systems.md
docs/play/: gameplay.md
src/: main.rs
src/components/: achievement.rs  building.rs  combat.rs  crafting.rs  defense.rs  enemy.rs  equipment.rs  mod.rs  plant.rs  plant_upgrade.rs  player.rs  quest.rs  resource.rs  robot.rs  save.rs
src/resources/: world.rs
src/states/: mod.rs
src/systems/: achievement_events.rs  achievement_generator.rs  achievement_manager.rs  building.rs  combat.rs  combat_effects.rs  crafting.rs  defense_range.rs  defense_tower.rs  defense_wall.rs  enemy.rs  enemy_attack.rs  enemy_base.rs  enemy_spawn.rs  energy.rs  equipment.rs  lighting.rs  map.rs  mod.rs  plant.rs  plant_upgrade.rs  player.rs  player_combat.rs  quest_events.rs  quest_generator.rs  quest_manager.rs  robot.rs  save_manager.rs  save_ui.rs  time.rs
src/ui/: building.rs  crafting.rs  hud.rs  menu.rs  mod.rs  plant_upgrade.rs
src/utils/: math.rs
